2016-10-25  Jérôme Pasquier  <rainbru@free.fr>

	* media/layouts/logo.scheme: remove unneeded file.
	* media/imagesets/logo.imageset: remove unneeded file.

2016-10-23  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (overlayHandler): implement and draw
	a CEGUI overlay for the logo.
	* src/client/GameEngine.cpp (~GameEngine): implement destructor.
	* media/logo.png: moved and renamed to media/imagesets/rpglogo.png.
	* src/client/resources.cfg.in (imagesets): add ../media/imagesets.
	* media/layouts/logo.imageset: now specify version 2 in imageset.

2016-10-22  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (run): try to add the previous layout but
	something's wrong.
	* media/layouts/logo.*: add an imageset, a layout and a scheme file.
	* media/logo.png: add a logo.

2016-10-21  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/main.cpp (main): use running() to exit before calling
	run().
	* src/client/GameEngine.cpp (running): implement getter function.
	* src/client/GameEngine.hpp (running): add running() declaration.

2016-10-20  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (Exit_OnClick): make the main menu's exit
	button exit the game.
	* src/client/GameEngine.hpp (GameEngine): add Exit_OnClick declaration.

2016-10-19  Jérôme Pasquier  <rainbru@free.fr>

	* CI/before_install.sh: another /usr/local/lib test using tee.

	* CI/before_install.sh: add basic manual installation of CEGUI 0.8.

2016-10-18  Jérôme Pasquier  <rainbru@free.fr>

	* media/layouts/menu.layout: change Y positions to buttons to make
	the buttons appear in new window type.
	* media/layouts/menu.layout (GameMenu): change type to
	TaharezLook/FrameWindow to make the resize cursors appear.

	* src/client/GameEngine.cpp (GameEngine): hide OIS mouse cursor.

2016-10-14  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (run): Initialize mouse position to 0,0.
	* src/client/GameEngine.cpp (run): Taharez mouse cursor is back.